--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -10,6 +10,6 @@
   <% end %>
 </ul>
 
-  <%= link_to "Create a new article", articles_new_path, class: "btn btn-outline-success btn-lg mt-2" %>
+  <%= link_to "Create a new article", new_article_path, class: "btn btn-outline-success btn-lg mt-2" %>
 </div>
 
