--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,7 +1,10 @@
 <div class="container text-center">
-<h1> <%= @article.title %></h1>
-
-<p> <%= @article.content %> </p>
-
-<%= link_to "Back to articles", articles_path %> - <%= link_to "Edit", edit_path %> - <%= link_to "Delete", article_path(@article), method: :delete, data: { confirm: "Are you sure?"} %>
+  <div class="title">
+    <h1> <%= @article.title %></h1>
+    <%= link_to articles_path do %>
+      <i class="fas fa-pen"></i>
+    <% end %> -
+    <%= link_to "Edit", edit_article_path %> - <%= link_to "Delete", article_path(@article), method: :delete, data: { confirm: "Are you sure?"} %>
+  </div>
+  <p> <%= @article.content %> </p>
 </div>
