--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,15 +1,11 @@
 <div class="container text-center">
-
-<h1>All articles</h1>
-
-<ul>
+<ul class="list-inline">
   <% @articles.each do |article| %>
   <li>
-    <%= link_to article.title, article_path(article) %> - <%= article.content %>
+    <h1><%= link_to article.title, article_path(article) %></h1>
+    <p><%= article.content %></p>
   </li>
   <% end %>
 </ul>
-
-  <%= link_to "Create a new article", new_article_path, class: "btn btn-outline-success btn-lg mt-2" %>
 </div>
 
